lib/src/raft.h

struct bop_raft_buffer;
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::snapshot
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_snapshot;
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::cluster_config
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_cluster_config;
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::svr_state
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_srv_state;
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::state_machine
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_fsm_ptr;
typedef void (*bop_raft_fsm_commit)(
    void *user_data, uint64_t log_idx, const unsigned char *data, size_t size,
    struct bop_raft_buffer **result
);
typedef void (*bop_raft_fsm_cluster_config)(void *user_data, uint64_t log_idx, void *new_conf);
typedef void (*bop_raft_fsm_rollback)(
    void *user_data, uint64_t log_idx, const unsigned char *data, size_t size
);
typedef int64_t (*bop_raft_fsm_get_next_batch_size_hint_in_bytes)(void *user_data);
typedef void (*bop_raft_fsm_snapshot_save)(
    void *user_data, uint64_t last_log_idx, uint64_t last_log_term,
    struct bop_raft_cluster_config *last_config, uint64_t size, uint8_t type, bool is_first_obj,
    bool is_last_obj, const unsigned char *data, size_t data_size
);
typedef bool (*bop_raft_fsm_snapshot_apply)(
    void *user_data, uint64_t last_log_idx, uint64_t last_log_term,
    struct bop_raft_cluster_config *last_config, uint64_t size, uint8_t type
);
typedef int32_t (*bop_raft_fsm_snapshot_read)(
    void *user_data, void **user_snapshot_ctx, uint64_t obj_id, struct bop_raft_buffer **data_out,
    bool *is_last_obj
);
typedef void (*bop_raft_fsm_free_user_snapshot_ctx)(void *user_data, void **user_snapshot_ctx);
typedef struct bop_raft_snapshot * (*bop_raft_fsm_last_snapshot)(void *user_data);
typedef uint64_t (*bop_raft_fsm_last_commit_index)(void *user_data);
typedef void (*bop_raft_fsm_create_snapshot)(
    void *user_data, struct bop_raft_snapshot *snapshot, struct bop_raft_buffer *snapshot_data, void *snp_data,
    size_t snp_data_size
);
typedef bool (*bop_raft_fsm_chk_create_snapshot)(void *user_data);
typedef bool (*bop_raft_fsm_allow_leadership_transfer)(void *user_data);
struct bop_raft_fsm_adjust_commit_index_params;
typedef uint64_t (*bop_raft_fsm_adjust_commit_index)(
    void *user_data, uint64_t current_commit_index, uint64_t expected_commit_index,
    const struct bop_raft_fsm_adjust_commit_index_params *params
);
BOP_API uint64_t bop_raft_fsm_adjust_commit_index_peer_index(
    struct bop_raft_fsm_adjust_commit_index_params *params, const int32_t peerID
);
BOP_API void bop_raft_fsm_adjust_commit_index_peer_indexes(
    struct bop_raft_fsm_adjust_commit_index_params *params, uint64_t *peers[16]
);
BOP_API struct bop_raft_fsm_ptr *bop_raft_fsm_make(
    void *user_data,
    struct bop_raft_cluster_config *current_conf,
    struct bop_raft_cluster_config *rollback_conf,
    bop_raft_fsm_commit commit,
    bop_raft_fsm_cluster_config commit_config,
    bop_raft_fsm_commit pre_commit,
    bop_raft_fsm_rollback rollback,
    bop_raft_fsm_cluster_config rollback_config,
    bop_raft_fsm_get_next_batch_size_hint_in_bytes get_next_batch_size_hint_in_bytes,
    bop_raft_fsm_snapshot_save save_snapshot,
    bop_raft_fsm_snapshot_apply apply_snapshot,
    bop_raft_fsm_snapshot_read read_snapshot,
    bop_raft_fsm_free_user_snapshot_ctx free_snapshot_user_ctx,
    bop_raft_fsm_last_snapshot last_snapshot,
    bop_raft_fsm_last_commit_index last_commit_index,
    bop_raft_fsm_create_snapshot create_snapshot,
    bop_raft_fsm_chk_create_snapshot chk_create_snapshot,
    bop_raft_fsm_allow_leadership_transfer allow_leadership_transfer,
    bop_raft_fsm_adjust_commit_index adjust_commit_index
);
BOP_API void bop_raft_fsm_delete(const struct bop_raft_fsm_ptr *fsm);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::state_mgr
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_log_store_ptr;
struct bop_raft_state_mgr_ptr;
typedef struct bop_raft_cluster_config * (*bop_raft_state_mgr_load_config)(void *user_data);
typedef void (*bop_raft_state_mgr_save_config)(
    void *user_data, const struct bop_raft_cluster_config *config
);
typedef void (*bop_raft_state_mgr_save_state)(void *user_data, const struct bop_raft_srv_state *state);
typedef struct bop_raft_srv_state * (*bop_raft_state_mgr_read_state)(void *user_data);
typedef struct bop_raft_log_store_ptr * (*bop_raft_state_mgr_load_log_store)(void *user_data);
typedef int32_t (*bop_raft_state_mgr_server_id)(void *user_data);
typedef void (*bop_raft_state_mgr_system_exit)(void *user_data, const int32_t exit_code);
BOP_API struct bop_raft_state_mgr_ptr *bop_raft_state_mgr_make(
    void *user_data,
    bop_raft_state_mgr_load_config load_config,
    bop_raft_state_mgr_save_config save_config,
    bop_raft_state_mgr_read_state read_state,
    bop_raft_state_mgr_save_state save_state,
    bop_raft_state_mgr_load_log_store load_log_store,
    bop_raft_state_mgr_server_id server_id,
    bop_raft_state_mgr_system_exit system_exit
);
BOP_API void bop_raft_state_mgr_delete(const struct bop_raft_state_mgr_ptr *sm);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::log_store
///////////////////////////////////////////////////////////////////////////////////////////////////

extern const size_t BOP_RAFT_LOG_ENTRY_PTR_SIZE;
struct bop_raft_log_entry_ptr {
    uint64_t data[2];
};
struct bop_raft_log_entry;
BOP_API struct bop_raft_log_entry *bop_raft_log_entry_make(
    uint64_t term, struct bop_raft_buffer *data, uint64_t timestamp, bool has_crc32, uint32_t crc32
);
BOP_API void bop_raft_log_entry_delete(const struct bop_raft_log_entry *entry);
struct bop_raft_log_entry_vector;
BOP_API void bop_raft_log_entry_vec_push(
    const struct bop_raft_log_entry_vector *vec, uint64_t term, struct bop_raft_buffer *data, uint64_t timestamp,
    bool has_crc32, uint32_t crc32
);
typedef uint64_t (*bop_raft_log_store_next_slot)(void *user_data);
typedef uint64_t (*bop_raft_log_store_start_index)(void *user_data);
typedef struct bop_raft_log_entry * (*bop_raft_log_store_last_entry)(void *user_data);
typedef uint64_t (*bop_raft_log_store_append)(
    void *user_data,
    struct bop_raft_log_entry_ptr log_entry,
    uint64_t term,
    uint8_t *data,
    size_t data_size,
    uint64_t log_timestamp,
    bool has_crc32,
    uint32_t crc32
);
typedef void (*bop_raft_log_store_write_at)(
    void *user_data, uint64_t index, uint64_t term, uint8_t *data, size_t data_size,
    uint64_t log_timestamp, bool has_crc32, uint32_t crc32
);
typedef void (*bop_raft_log_store_end_of_append_batch)(
    void *user_data, uint64_t start, uint64_t cnt
);
typedef bool (*bop_raft_log_store_log_entries)(
    void *user_data, struct bop_raft_log_entry_vector *vec, uint64_t start, uint64_t end
);
typedef struct bop_raft_log_entry * (*bop_raft_log_store_entry_at)(void *user_data, uint64_t index);
typedef uint64_t (*bop_raft_log_store_term_at)(void *user_data, uint64_t index);
typedef struct bop_raft_buffer * (*bop_raft_log_store_pack)(void *user_data, uint64_t index, int32_t cnt);
typedef void (*bop_raft_log_store_apply_pack)(
    void *user_data, uint64_t index, struct bop_raft_buffer *pack
);
typedef bool (*bop_raft_log_store_compact)(void *user_data, uint64_t last_log_index);
typedef bool (*bop_raft_log_store_compact_async)(void *user_data, uint64_t last_log_index);
typedef bool (*bop_raft_log_store_flush)(void *user_data);
typedef uint64_t (*bop_raft_log_store_last_durable_index)(void *user_data);
BOP_API struct bop_raft_log_store_ptr *bop_raft_log_store_make(
    void *user_data,
    bop_raft_log_store_next_slot next_slot,
    bop_raft_log_store_start_index start_index,
    bop_raft_log_store_last_entry last_entry,
    bop_raft_log_store_append append,
    bop_raft_log_store_write_at write_at,
    bop_raft_log_store_end_of_append_batch end_of_append_batch,
    bop_raft_log_store_log_entries log_entries,
    bop_raft_log_store_entry_at entry_at,
    bop_raft_log_store_term_at term_at,
    bop_raft_log_store_pack pack,
    bop_raft_log_store_apply_pack apply_pack,
    bop_raft_log_store_compact compact,
    bop_raft_log_store_compact_async compact_async,
    bop_raft_log_store_flush flush,
    bop_raft_log_store_last_durable_index last_durable_index
);
BOP_API void bop_raft_log_store_delete(const struct bop_raft_log_store_ptr *log_store);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::counter
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_counter;