rust/bop-rs/src/bindings.rs

pub type bop_raft_fsm_commit = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        log_idx: u64,
        data: *const ::std::os::raw::c_uchar,
        size: usize,
        result: *mut *mut bop_raft_buffer,
    ),
>;
pub type bop_raft_fsm_cluster_config = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        log_idx: u64,
        new_conf: *mut ::std::os::raw::c_void,
    ),
>;
pub type bop_raft_fsm_rollback = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        log_idx: u64,
        data: *const ::std::os::raw::c_uchar,
        size: usize,
    ),
>;
pub type bop_raft_fsm_get_next_batch_size_hint_in_bytes =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> i64>;
pub type bop_raft_fsm_snapshot_save = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        last_log_idx: u64,
        last_log_term: u64,
        last_config: *mut bop_raft_cluster_config,
        size: u64,
        type_: u8,
        is_first_obj: bool,
        is_last_obj: bool,
        data: *const ::std::os::raw::c_uchar,
        data_size: usize,
    ),
>;
pub type bop_raft_fsm_snapshot_apply = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        last_log_idx: u64,
        last_log_term: u64,
        last_config: *mut bop_raft_cluster_config,
        size: u64,
        type_: u8,
    ) -> bool,
>;
pub type bop_raft_fsm_snapshot_read = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        user_snapshot_ctx: *mut *mut ::std::os::raw::c_void,
        obj_id: u64,
        data_out: *mut *mut bop_raft_buffer,
        is_last_obj: *mut bool,
    ) -> i32,
>;
pub type bop_raft_fsm_free_user_snapshot_ctx = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        user_snapshot_ctx: *mut *mut ::std::os::raw::c_void,
    ),
>;
pub type bop_raft_fsm_last_snapshot = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> *mut bop_raft_snapshot,
>;
pub type bop_raft_fsm_last_commit_index =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> u64>;
pub type bop_raft_fsm_create_snapshot = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        snapshot: *mut bop_raft_snapshot,
        snapshot_data: *mut bop_raft_buffer,
        snp_data: *mut ::std::os::raw::c_void,
        snp_data_size: usize,
    ),
>;
pub type bop_raft_fsm_chk_create_snapshot =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> bool>;
pub type bop_raft_fsm_allow_leadership_transfer =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> bool>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_fsm_adjust_commit_index_params {
    _unused: [u8; 0],
}
pub type bop_raft_fsm_adjust_commit_index = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        current_commit_index: u64,
        expected_commit_index: u64,
        params: *const bop_raft_fsm_adjust_commit_index_params,
    ) -> u64,
>;
unsafe extern "C" {
    pub fn bop_raft_fsm_adjust_commit_index_peer_index(
        params: *mut bop_raft_fsm_adjust_commit_index_params,
        peerID: i32,
    ) -> u64;
}
unsafe extern "C" {
    pub fn bop_raft_fsm_adjust_commit_index_peer_indexes(
        params: *mut bop_raft_fsm_adjust_commit_index_params,
        peers: *mut *mut u64,
    );
}
unsafe extern "C" {
    pub fn bop_raft_fsm_make(
        user_data: *mut ::std::os::raw::c_void,
        current_conf: *mut bop_raft_cluster_config,
        rollback_conf: *mut bop_raft_cluster_config,
        commit: bop_raft_fsm_commit,
        commit_config: bop_raft_fsm_cluster_config,
        pre_commit: bop_raft_fsm_commit,
        rollback: bop_raft_fsm_rollback,
        rollback_config: bop_raft_fsm_cluster_config,
        get_next_batch_size_hint_in_bytes: bop_raft_fsm_get_next_batch_size_hint_in_bytes,
        save_snapshot: bop_raft_fsm_snapshot_save,
        apply_snapshot: bop_raft_fsm_snapshot_apply,
        read_snapshot: bop_raft_fsm_snapshot_read,
        free_snapshot_user_ctx: bop_raft_fsm_free_user_snapshot_ctx,
        last_snapshot: bop_raft_fsm_last_snapshot,
        last_commit_index: bop_raft_fsm_last_commit_index,
        create_snapshot: bop_raft_fsm_create_snapshot,
        chk_create_snapshot: bop_raft_fsm_chk_create_snapshot,
        allow_leadership_transfer: bop_raft_fsm_allow_leadership_transfer,
        adjust_commit_index: bop_raft_fsm_adjust_commit_index,
    ) -> *mut bop_raft_fsm_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_fsm_delete(fsm: *const bop_raft_fsm_ptr);
}
#[doc = "\n nuraft::state_mgr\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_log_store_ptr {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_state_mgr_ptr {
    _unused: [u8; 0],
}
pub type bop_raft_state_mgr_load_config = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> *mut bop_raft_cluster_config,
>;
pub type bop_raft_state_mgr_save_config = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        config: *const bop_raft_cluster_config,
    ),
>;
pub type bop_raft_state_mgr_save_state = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, state: *const bop_raft_srv_state),
>;
pub type bop_raft_state_mgr_read_state = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> *mut bop_raft_srv_state,
>;
pub type bop_raft_state_mgr_load_log_store = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> *mut bop_raft_log_store_ptr,
>;
pub type bop_raft_state_mgr_server_id =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> i32>;
pub type bop_raft_state_mgr_system_exit = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, exit_code: i32),
>;
unsafe extern "C" {
    pub fn bop_raft_state_mgr_make(
        user_data: *mut ::std::os::raw::c_void,
        load_config: bop_raft_state_mgr_load_config,
        save_config: bop_raft_state_mgr_save_config,
        read_state: bop_raft_state_mgr_read_state,
        save_state: bop_raft_state_mgr_save_state,
        load_log_store: bop_raft_state_mgr_load_log_store,
        server_id: bop_raft_state_mgr_server_id,
        system_exit: bop_raft_state_mgr_system_exit,
    ) -> *mut bop_raft_state_mgr_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_state_mgr_delete(sm: *const bop_raft_state_mgr_ptr);
}
unsafe extern "C" {
    #[doc = "\n nuraft::log_store\n"]
    pub static BOP_RAFT_LOG_ENTRY_PTR_SIZE: usize;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct bop_raft_log_entry_ptr {
    pub data: [u64; 2usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_log_entry {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_log_entry_make(
        term: u64,
        data: *mut bop_raft_buffer,
        timestamp: u64,
        has_crc32: bool,
        crc32: u32,
    ) -> *mut bop_raft_log_entry;
}
unsafe extern "C" {
    pub fn bop_raft_log_entry_delete(entry: *const bop_raft_log_entry);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_log_entry_vector {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_log_entry_vec_push(
        vec: *const bop_raft_log_entry_vector,
        term: u64,
        data: *mut bop_raft_buffer,
        timestamp: u64,
        has_crc32: bool,
        crc32: u32,
    );
}
pub type bop_raft_log_store_next_slot =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> u64>;
pub type bop_raft_log_store_start_index =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> u64>;
pub type bop_raft_log_store_last_entry = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> *mut bop_raft_log_entry,
>;
pub type bop_raft_log_store_append = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        log_entry: bop_raft_log_entry_ptr,
        term: u64,
        data: *mut u8,
        data_size: usize,
        log_timestamp: u64,
        has_crc32: bool,
        crc32: u32,
    ) -> u64,
>;
pub type bop_raft_log_store_write_at = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        index: u64,
        term: u64,
        data: *mut u8,
        data_size: usize,
        log_timestamp: u64,
        has_crc32: bool,
        crc32: u32,
    ),
>;
pub type bop_raft_log_store_end_of_append_batch = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, start: u64, cnt: u64),
>;
pub type bop_raft_log_store_log_entries = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        vec: *mut bop_raft_log_entry_vector,
        start: u64,
        end: u64,
    ) -> bool,
>;
pub type bop_raft_log_store_entry_at = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        index: u64,
    ) -> *mut bop_raft_log_entry,
>;
pub type bop_raft_log_store_term_at = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, index: u64) -> u64,
>;
pub type bop_raft_log_store_pack = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        index: u64,
        cnt: i32,
    ) -> *mut bop_raft_buffer,
>;
pub type bop_raft_log_store_apply_pack = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        index: u64,
        pack: *mut bop_raft_buffer,
    ),
>;
pub type bop_raft_log_store_compact = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, last_log_index: u64) -> bool,
>;
pub type bop_raft_log_store_compact_async = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, last_log_index: u64) -> bool,
>;
pub type bop_raft_log_store_flush =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> bool>;
pub type bop_raft_log_store_last_durable_index =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> u64>;
unsafe extern "C" {
    pub fn bop_raft_log_store_make(
        user_data: *mut ::std::os::raw::c_void,
        next_slot: bop_raft_log_store_next_slot,
        start_index: bop_raft_log_store_start_index,
        last_entry: bop_raft_log_store_last_entry,
        append: bop_raft_log_store_append,
        write_at: bop_raft_log_store_write_at,
        end_of_append_batch: bop_raft_log_store_end_of_append_batch,
        log_entries: bop_raft_log_store_log_entries,
        entry_at: bop_raft_log_store_entry_at,
        term_at: bop_raft_log_store_term_at,
        pack: bop_raft_log_store_pack,
        apply_pack: bop_raft_log_store_apply_pack,
        compact: bop_raft_log_store_compact,
        compact_async: bop_raft_log_store_compact_async,
        flush: bop_raft_log_store_flush,
        last_durable_index: bop_raft_log_store_last_durable_index,
    ) -> *mut bop_raft_log_store_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_log_store_delete(log_store: *const bop_raft_log_store_ptr);
}
#[doc = "\n nuraft::counter\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_counter {
    _unused: [u8; 0],
}
